--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,6 +3,9 @@ development:
 reference:
 - title: "Datasets"
 - contents:
+  - abbreviations_lup
+  - adol_dim_scalg_eqs_lup
+  - adol_dim_scalg_eqs_tb
   - aqol6d_from_8d_coeffs_lup_tb
   - dim_sclg_constant_lup_tb
   - disutilities_lup_tb
