Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(add_domain_unwtd_tots_tb)
 export(add_itm_disu_to_aqol6d_itms_tb_tb)
 export(add_labels_to_aqol6d_tb)
 export(add_uids_to_tbs_ls)
+export(calculate_adol_aqol6d)
 export(calculate_aqol6dU_dbl)
 export(calculate_aqol6d_d1_disu_dbl)
 export(calculate_aqol6d_d2_disu_dbl)
