--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,7 +8,7 @@ reference:
   - adol_dim_scalg_eqs_tb
   - aqol6d_from_8d_coeffs_lup_tb
   - dim_sclg_constant_lup_tb
-  - disutilities_lup_tb
+  - disvalues_lup_tb
   - fn_type_lup_tb
   - itm_wrst_wghts_lup_tb
   - syn_pop_with_STATA_adults_scoring_tb
