Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,12 +51,12 @@ importFrom(Matrix,forceSymmetric)
 importFrom(Surrogate,RandVec)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
-importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,pull)
@@ -84,6 +84,7 @@ importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
+importFrom(purrr,map_int)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_dbl)
@@ -103,5 +104,6 @@ importFrom(stats,setNames)
 importFrom(stringr,str_replace)
 importFrom(tibble,as.tibble)
 importFrom(tibble,as_tibble)
+importFrom(tibble,rowid_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyselect,all_of)
