Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(impute_miss_itms_in_aqol6d_items_tb_tb)
 export(make_adol_aqol6d_disv_lup)
 export(make_aqol6d_fns_ls)
 export(make_aqol6d_items_tb)
+export(make_complete_props_tbs_ls)
 export(make_correlated_data_tb)
 export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
@@ -59,6 +60,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
