--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,12 +7,18 @@ reference:
   - adol_dim_scalg_eqs_lup
   - adol_dim_scalg_eqs_tb
   - aqol6d_from_8d_coeffs_lup_tb
+  - BL_correlations_tb
   - dim_sclg_constant_lup_tb
   - disutilities_lup_tb
   - disvalues_lup_tb
+  - domain_qs_lup_tb
   - fn_type_lup_tb
+  - FUP_correlations_tb
   - itm_wrst_wghts_lup_tb
-  - syn_pop_with_STATA_adults_scoring_tb
+  - measurements_tb
+  - aqol6d_adult_vldn_pop_with_STATA_scores_tb
+  - var_class_pars_tb
+  - var_summ_res_tb
 - title: "Functions"
 - contents:
   - add_aqol_items_tbs_ls
