Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(force_vec_to_sum_to_int)
 export(impute_adol_unscrd_aqol_ds)
 export(impute_miss_itms_in_aqol6d_items_tb_tb)
 export(make_adol_aqol6d_disv_lup)
+export(make_aqol6d_adol_pop_tbs_ls)
 export(make_aqol6d_fns_ls)
 export(make_aqol6d_items_tb)
 export(make_complete_props_tbs_ls)
