Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(add_aqol6dU_to_aqol6d_items_tb)
 export(add_aqol6dU_to_aqol6d_tbs_ls)
 export(add_aqol6d_adol_dim_scrg_eqs)
 export(add_aqol6d_items_to_aqol6d_tbs_ls)
-export(add_corrs_and_uts_to_aqol6d_tbs_ls)
+export(add_cors_and_uts_to_aqol6d_tbs_ls)
 export(add_dim_disv_to_aqol6d_items_tb)
 export(add_dim_scores_to_aqol6d_items_tb)
 export(add_itm_disv_to_aqol6d_itms_tb)
@@ -35,10 +35,10 @@ export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
 export(make_domain_items_ls)
 export(make_item_wrst_wghts_ls_ls)
-export(make_pdef_corr_mat_mat)
+export(make_pdef_cor_mat_mat)
 export(make_synth_series_tbs_ls)
 export(make_vec_with_sum_of_int)
-export(randomise_change_in_fct_var)
+export(randomise_changes_in_fct_levs)
 export(reorder_tbs_for_target_cors)
 export(replace_with_missing_vals)
 export(scramble_xx)
