Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(add_itm_disv_to_aqol6d_itms_tb)
 export(add_labels_to_aqol6d_tb)
 export(add_uids_to_tbs_ls)
 export(add_unwtd_dim_tots)
+export(add_wtd_dim_tots)
 export(calculate_adol_aqol6dU)
 export(calculate_adult_aqol6dU)
 export(calculate_aqol6d_dim_1_disv)
@@ -66,6 +67,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
+importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,vars)
@@ -77,6 +79,7 @@ importFrom(matrixcalc,is.positive.definite)
 importFrom(mice,complete)
 importFrom(mice,mice)
 importFrom(psych,cor.smooth)
+importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_dbl)
