Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,10 +22,24 @@ export(calculate_aqol6d_dim_4_disv)
 export(calculate_aqol6d_dim_5_disv)
 export(calculate_aqol6d_dim_6_disv)
 export(extract_guide_box_lgd)
+export(firstbounce_aqol6d_adol)
+export(firstbounce_bads)
+export(firstbounce_gad7)
+export(firstbounce_k6)
+export(firstbounce_oasis)
+export(firstbounce_phq9)
+export(firstbounce_scared)
 export(force_min_max_and_int_cnstrs)
 export(force_vec_to_sum_to_int)
 export(impute_adult_aqol6d_items_tb)
 export(impute_unscrd_adol_aqol6d_ds)
+export(is_firstbounce_aqol6d_adol)
+export(is_firstbounce_bads)
+export(is_firstbounce_gad7)
+export(is_firstbounce_k6)
+export(is_firstbounce_oasis)
+export(is_firstbounce_phq9)
+export(is_firstbounce_scared)
 export(make_adol_aqol6d_disv_lup)
 export(make_aqol6d_adol_pop_tbs_ls)
 export(make_aqol6d_fns_ls)
@@ -36,7 +50,21 @@ export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
 export(make_domain_items_ls)
 export(make_item_wrst_wghts_ls_ls)
+export(make_new_firstbounce_aqol6d_adol)
+export(make_new_firstbounce_bads)
+export(make_new_firstbounce_gad7)
+export(make_new_firstbounce_k6)
+export(make_new_firstbounce_oasis)
+export(make_new_firstbounce_phq9)
+export(make_new_firstbounce_scared)
 export(make_pdef_cor_mat_mat)
+export(make_prototype_firstbounce_aqol6d_adol)
+export(make_prototype_firstbounce_bads)
+export(make_prototype_firstbounce_gad7)
+export(make_prototype_firstbounce_k6)
+export(make_prototype_firstbounce_oasis)
+export(make_prototype_firstbounce_phq9)
+export(make_prototype_firstbounce_scared)
 export(make_synth_series_tbs_ls)
 export(make_vec_with_sum_of_int)
 export(randomise_changes_in_fct_levs)
@@ -44,6 +72,13 @@ export(reorder_tbs_for_target_cors)
 export(replace_with_missing_vals)
 export(scramble_xx)
 export(transform_raw_aqol_tb_to_aqol6d_tb)
+export(validate_firstbounce_aqol6d_adol)
+export(validate_firstbounce_bads)
+export(validate_firstbounce_gad7)
+export(validate_firstbounce_k6)
+export(validate_firstbounce_oasis)
+export(validate_firstbounce_phq9)
+export(validate_firstbounce_scared)
 export(write_results_to_csv)
 import(methods)
 importFrom(Hmisc,label)
