--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(calculate_aqol6d_dim_3_disv)
 export(calculate_aqol6d_dim_4_disv)
 export(calculate_aqol6d_dim_5_disv)
 export(calculate_aqol6d_dim_6_disv)
+export(calculate_rmse)
+export(calculate_rmse_tfmn)
 export(extract_guide_box_lgd)
 export(firstbounce_aqol6d_adol)
 export(firstbounce_bads)
@@ -29,6 +31,9 @@ export(firstbounce_k6)
 export(firstbounce_oasis)
 export(firstbounce_phq9)
 export(firstbounce_scared)
+export(fit_clg_log_tfmn)
+export(fit_gsn_log_lnk)
+export(fit_ts_model_with_brm)
 export(force_min_max_and_int_cnstrs)
 export(force_vec_to_sum_to_int)
 export(impute_adult_aqol6d_items_tb)
@@ -44,12 +49,15 @@ export(make_adol_aqol6d_disv_lup)
 export(make_aqol6d_adol_pop_tbs_ls)
 export(make_aqol6d_fns_ls)
 export(make_aqol6d_items_tb)
+export(make_brms_mdl_print_ls)
+export(make_brms_mdl_smry_tbl)
 export(make_complete_props_tbs_ls)
 export(make_correlated_data_tb)
 export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
 export(make_domain_items_ls)
 export(make_item_wrst_wghts_ls_ls)
+export(make_mdl_smry_elmt_tbl)
 export(make_new_firstbounce_aqol6d_adol)
 export(make_new_firstbounce_bads)
 export(make_new_firstbounce_gad7)
@@ -65,13 +73,24 @@ export(make_prototype_firstbounce_k6)
 export(make_prototype_firstbounce_oasis)
 export(make_prototype_firstbounce_phq9)
 export(make_prototype_firstbounce_scared)
+export(make_smry_of_brm_mdl)
+export(make_smry_of_ts_mdl)
 export(make_synth_series_tbs_ls)
 export(make_vec_with_sum_of_int)
+export(plot_obsd_predd_dnst)
+export(plot_obsd_predd_sctr)
+export(predict_from_mdl_coefs)
+export(print_all_plts_for_mdl_set)
+export(print_table_xx)
+export(print_ts_mdl_plts)
 export(randomise_changes_in_fct_levs)
 export(reorder_tbs_for_target_cors)
 export(replace_with_missing_vals)
 export(scramble_xx)
+export(transform_dep_var_nm_for_cll)
 export(transform_raw_aqol_tb_to_aqol6d_tb)
+export(transform_tb_to_mdl_inp)
+export(transform_ts_mdl_data)
 export(validate_firstbounce_aqol6d_adol)
 export(validate_firstbounce_bads)
 export(validate_firstbounce_gad7)
@@ -79,20 +98,29 @@ export(validate_firstbounce_k6)
 export(validate_firstbounce_oasis)
 export(validate_firstbounce_phq9)
 export(validate_firstbounce_scared)
+export(write_brm_mdl_plt_fl)
+export(write_brm_model_plts)
 export(write_results_to_csv)
 import(methods)
 importFrom(Hmisc,label)
+importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(MASS,mvrnorm)
 importFrom(Matrix,forceSymmetric)
 importFrom(Surrogate,RandVec)
+importFrom(brms,bayes_R2)
+importFrom(brms,brm)
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,first)
+importFrom(dplyr,group_by)
+importFrom(dplyr,lag)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
@@ -105,18 +133,47 @@ importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
+importFrom(dplyr,summarise)
 importFrom(dplyr,vars)
+importFrom(flextable,add_footer_lines)
+importFrom(flextable,autofit)
+importFrom(flextable,bold)
+importFrom(flextable,colformat_num)
+importFrom(flextable,flextable)
+importFrom(flextable,merge_h_range)
+importFrom(flextable,set_caption)
+importFrom(ggalt,geom_bkde)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_rug)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,ggplot_gtable)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlim)
+importFrom(ggplot2,ylim)
+importFrom(grDevices,png)
 importFrom(hutils,longest_prefix)
+importFrom(kableExtra,footnote)
+importFrom(kableExtra,kable_paper)
+importFrom(kableExtra,kbl)
+importFrom(kableExtra,row_spec)
 importFrom(magrittr,"%>%")
 importFrom(matrixcalc,is.positive.definite)
 importFrom(mice,complete)
 importFrom(mice,mice)
+importFrom(officer,run_autonum)
 importFrom(psych,cor.smooth)
+importFrom(psych,describe)
 importFrom(purrr,discard)
+importFrom(purrr,flatten)
+importFrom(purrr,flatten_chr)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_chr)
 importFrom(purrr,map2_dbl)
 importFrom(purrr,map2_lgl)
 importFrom(purrr,map_chr)
@@ -126,7 +183,9 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap_dbl)
+importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
+importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(ready4fun,get_from_lup_obj)
 importFrom(rlang,exec)
@@ -140,7 +199,11 @@ importFrom(simstudy,genMiss)
 importFrom(simstudy,genObs)
 importFrom(stats,setNames)
 importFrom(stringr,str_replace)
+importFrom(tibble,add_case)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rowid_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,gather)
 importFrom(tidyselect,all_of)
+importFrom(viridis,scale_fill_viridis)
+importFrom(xtable,xtable)
