--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(is_firstbounce_k6)
 export(is_firstbounce_oasis)
 export(is_firstbounce_phq9)
 export(is_firstbounce_scared)
+export(knit_mdl_rprt)
 export(make_adol_aqol6d_disv_lup)
 export(make_aqol6d_adol_pop_tbs_ls)
 export(make_aqol6d_fns_ls)
@@ -57,6 +58,8 @@ export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
 export(make_domain_items_ls)
 export(make_item_wrst_wghts_ls_ls)
+export(make_knit_pars_ls)
+export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
 export(make_new_firstbounce_aqol6d_adol)
 export(make_new_firstbounce_bads)
@@ -76,6 +79,7 @@ export(make_prototype_firstbounce_scared)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_ts_mdl)
 export(make_synth_series_tbs_ls)
+export(make_unique_ls_elmt_idx_int)
 export(make_vec_with_sum_of_int)
 export(plot_obsd_predd_dnst)
 export(plot_obsd_predd_sctr)
@@ -129,11 +133,13 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,rename_with)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(flextable,add_footer_lines)
 importFrom(flextable,autofit)
@@ -161,6 +167,8 @@ importFrom(kableExtra,footnote)
 importFrom(kableExtra,kable_paper)
 importFrom(kableExtra,kbl)
 importFrom(kableExtra,row_spec)
+importFrom(knitr,knit_child)
+importFrom(knitr,knit_expand)
 importFrom(magrittr,"%>%")
 importFrom(matrixcalc,is.positive.definite)
 importFrom(mice,complete)
@@ -171,6 +179,7 @@ importFrom(psych,describe)
 importFrom(purrr,discard)
 importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
+importFrom(purrr,flatten_int)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
@@ -182,6 +191,7 @@ importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,pluck)
+importFrom(purrr,pmap)
 importFrom(purrr,pmap_dbl)
 importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
