Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,13 @@ export(calculate_aqol6d_dim_6_disv)
 export(calculate_rmse)
 export(calculate_rmse_tfmn)
 export(extract_guide_box_lgd)
+export(firstbounce_aqol6d_adol)
+export(firstbounce_bads)
+export(firstbounce_gad7)
+export(firstbounce_k6)
+export(firstbounce_oasis)
+export(firstbounce_phq9)
+export(firstbounce_scared)
 export(fit_clg_log_tfmn)
 export(fit_gsn_log_lnk)
 export(fit_ts_model_with_brm)
@@ -31,6 +38,13 @@ export(force_min_max_and_int_cnstrs)
 export(force_vec_to_sum_to_int)
 export(impute_adult_aqol6d_items_tb)
 export(impute_unscrd_adol_aqol6d_ds)
+export(is_firstbounce_aqol6d_adol)
+export(is_firstbounce_bads)
+export(is_firstbounce_gad7)
+export(is_firstbounce_k6)
+export(is_firstbounce_oasis)
+export(is_firstbounce_phq9)
+export(is_firstbounce_scared)
 export(knit_mdl_rprt)
 export(make_adol_aqol6d_disv_lup)
 export(make_aqol6d_adol_pop_tbs_ls)
@@ -47,7 +61,21 @@ export(make_item_wrst_wghts_ls_ls)
 export(make_knit_pars_ls)
 export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
+export(make_new_firstbounce_aqol6d_adol)
+export(make_new_firstbounce_bads)
+export(make_new_firstbounce_gad7)
+export(make_new_firstbounce_k6)
+export(make_new_firstbounce_oasis)
+export(make_new_firstbounce_phq9)
+export(make_new_firstbounce_scared)
 export(make_pdef_cor_mat_mat)
+export(make_prototype_firstbounce_aqol6d_adol)
+export(make_prototype_firstbounce_bads)
+export(make_prototype_firstbounce_gad7)
+export(make_prototype_firstbounce_k6)
+export(make_prototype_firstbounce_oasis)
+export(make_prototype_firstbounce_phq9)
+export(make_prototype_firstbounce_scared)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_ts_mdl)
 export(make_synth_series_tbs_ls)
@@ -67,6 +95,13 @@ export(transform_dep_var_nm_for_cll)
 export(transform_raw_aqol_tb_to_aqol6d_tb)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
+export(validate_firstbounce_aqol6d_adol)
+export(validate_firstbounce_bads)
+export(validate_firstbounce_gad7)
+export(validate_firstbounce_k6)
+export(validate_firstbounce_oasis)
+export(validate_firstbounce_phq9)
+export(validate_firstbounce_scared)
 export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
 export(write_results_to_csv)
