Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(make_new_firstbounce_oasis)
 export(make_new_firstbounce_phq9)
 export(make_new_firstbounce_scared)
 export(make_pdef_cor_mat_mat)
+export(make_predr_vars_nms_ls)
 export(make_prototype_firstbounce_aqol6d_adol)
 export(make_prototype_firstbounce_bads)
 export(make_prototype_firstbounce_gad7)
