--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: FBaqol
 Title: Map measures routinely collected in youth mental
     health services to AQOL 6D Health Utility.
-Version: 0.0.0.9043
+Version: 0.0.0.9044
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -28,9 +28,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends: 
-    R (>= 2.10)
 Imports: 
+    lifecycle,
     ready4fun (>= 0.0.0.9230),
     brms,
     dplyr,
@@ -61,5 +60,8 @@ Imports:
     tidyselect,
     viridis,
     xtable
+RdMacros: lifecycle
+Depends: 
+    R (>= 2.10)
 Remotes: 
     readyforwhatsnext/ready4fun
