Increment version number

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: FBaqol
 Title: Map measures routinely collected in youth mental
     health services to AQOL 6D Health Utility.
-Version: 0.0.0.9044
+Version: 0.0.0.9045
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -51,6 +51,7 @@ Imports:
     psych,
     purrr,
     rlang,
+    rmarkdown,
     simstudy,
     stats,
     stringr,
