--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(validate_firstbounce_scared)
 export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
 export(write_results_to_csv)
+export(write_rndrd_rprt)
 import(methods)
 importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
@@ -202,6 +203,7 @@ importFrom(ready4fun,get_from_lup_obj)
 importFrom(rlang,exec)
 importFrom(rlang,parse_expr)
 importFrom(rlang,sym)
+importFrom(rmarkdown,render)
 importFrom(simstudy,defData)
 importFrom(simstudy,defMiss)
 importFrom(simstudy,genCorData)
