Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
 export(write_results_to_csv)
 export(write_rndrd_rprt)
+export(write_ts_mdls)
 import(methods)
 importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
@@ -186,6 +187,7 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
 importFrom(purrr,map2_dbl)
+importFrom(purrr,map2_dfr)
 importFrom(purrr,map2_lgl)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
