Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(calculate_aqol6d_dim_3_disv)
 export(calculate_aqol6d_dim_4_disv)
 export(calculate_aqol6d_dim_5_disv)
 export(calculate_aqol6d_dim_6_disv)
+export(calculate_dep_var_tfmn)
 export(calculate_rmse)
 export(calculate_rmse_tfmn)
 export(extract_guide_box_lgd)
@@ -92,6 +93,7 @@ export(randomise_changes_in_fct_levs)
 export(reorder_tbs_for_target_cors)
 export(replace_with_missing_vals)
 export(scramble_xx)
+export(transform_dep_var_nm)
 export(transform_dep_var_nm_for_cll)
 export(transform_raw_aqol_tb_to_aqol6d_tb)
 export(transform_tb_to_mdl_inp)
@@ -115,6 +117,7 @@ importFrom(Hmisc,rcorr)
 importFrom(MASS,mvrnorm)
 importFrom(Matrix,forceSymmetric)
 importFrom(Surrogate,RandVec)
+importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
 importFrom(brms,brm)
 importFrom(dplyr,across)
@@ -179,6 +182,7 @@ importFrom(mice,mice)
 importFrom(officer,run_autonum)
 importFrom(psych,cor.smooth)
 importFrom(psych,describe)
+importFrom(psych,logit)
 importFrom(purrr,discard)
 importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
