--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(fit_gsn_log_lnk)
 export(fit_ts_model_with_brm)
 export(force_min_max_and_int_cnstrs)
 export(force_vec_to_sum_to_int)
+export(get_signft_covars)
 export(impute_adult_aqol6d_items_tb)
 export(impute_unscrd_adol_aqol6d_ds)
 export(is_firstbounce_aqol6d_adol)
@@ -58,8 +59,10 @@ export(make_correlated_data_tb)
 export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
 export(make_domain_items_ls)
+export(make_folds_ls)
 export(make_item_wrst_wghts_ls_ls)
 export(make_knit_pars_ls)
+export(make_mdl)
 export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
 export(make_new_firstbounce_aqol6d_adol)
@@ -70,6 +73,7 @@ export(make_new_firstbounce_oasis)
 export(make_new_firstbounce_phq9)
 export(make_new_firstbounce_scared)
 export(make_pdef_cor_mat_mat)
+export(make_predn_ds_with_one_predr)
 export(make_predr_vars_nms_ls)
 export(make_prototype_firstbounce_aqol6d_adol)
 export(make_prototype_firstbounce_bads)
@@ -79,10 +83,14 @@ export(make_prototype_firstbounce_oasis)
 export(make_prototype_firstbounce_phq9)
 export(make_prototype_firstbounce_scared)
 export(make_smry_of_brm_mdl)
+export(make_smry_of_mdl)
 export(make_smry_of_ts_mdl)
 export(make_synth_series_tbs_ls)
 export(make_unique_ls_elmt_idx_int)
 export(make_vec_with_sum_of_int)
+export(plot_auto_lm)
+export(plot_lnr_cmprsn)
+export(plot_lnr_cmprsn_sctr_plt)
 export(plot_obsd_predd_dnst)
 export(plot_obsd_predd_sctr)
 export(predict_from_mdl_coefs)
@@ -93,8 +101,11 @@ export(randomise_changes_in_fct_levs)
 export(reorder_tbs_for_target_cors)
 export(replace_with_missing_vals)
 export(scramble_xx)
+export(transform_data_tb_for_cmprsn)
 export(transform_dep_var_nm)
 export(transform_dep_var_nm_for_cll)
+export(transform_ds_for_mdlng)
+export(transform_ds_for_tstng)
 export(transform_raw_aqol_tb_to_aqol6d_tb)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
@@ -105,27 +116,41 @@ export(validate_firstbounce_k6)
 export(validate_firstbounce_oasis)
 export(validate_firstbounce_phq9)
 export(validate_firstbounce_scared)
+export(write_box_cox_tfmn)
 export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
+export(write_mdl_plts)
+export(write_mdl_type_covars_mdls)
+export(write_mdl_type_multi_outps)
+export(write_mdl_type_sngl_outps)
+export(write_predr_cmprsn_outps)
 export(write_results_to_csv)
 export(write_rndrd_rprt)
+export(write_sngl_predr_multi_mdls_outps)
 export(write_ts_mdls)
 import(methods)
+importFrom(Boruta,Boruta)
 importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
+importFrom(MASS,boxcox)
 importFrom(MASS,mvrnorm)
 importFrom(Matrix,forceSymmetric)
 importFrom(Surrogate,RandVec)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
 importFrom(brms,brm)
+importFrom(caret,MAE)
+importFrom(caret,R2)
+importFrom(caret,RMSE)
+importFrom(caret,createFolds)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
+importFrom(dplyr,desc)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -145,6 +170,7 @@ importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
+importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(flextable,add_footer_lines)
@@ -156,8 +182,12 @@ importFrom(flextable,merge_h_range)
 importFrom(flextable,set_caption)
 importFrom(ggalt,geom_bkde)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,autoplot)
+importFrom(ggplot2,geom_abline)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rug)
+importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,ggplot_gtable)
@@ -205,10 +235,13 @@ importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
+importFrom(randomForest,randomForest)
+importFrom(randomForest,varImpPlot)
 importFrom(ready4fun,get_from_lup_obj)
 importFrom(rlang,exec)
 importFrom(rlang,parse_expr)
 importFrom(rlang,sym)
+importFrom(rlang,syms)
 importFrom(rmarkdown,render)
 importFrom(simstudy,defData)
 importFrom(simstudy,defMiss)
@@ -217,11 +250,14 @@ importFrom(simstudy,genData)
 importFrom(simstudy,genMiss)
 importFrom(simstudy,genObs)
 importFrom(stats,setNames)
+importFrom(stringi,stri_locate_last_fixed)
 importFrom(stringr,str_replace)
+importFrom(stringr,str_sub)
 importFrom(tibble,add_case)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rowid_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,gather)
 importFrom(tidyselect,all_of)
 importFrom(viridis,scale_fill_viridis)
