Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(make_correlated_data_tb)
 export(make_corstars_tbl_xx)
 export(make_dim_sclg_cons_dbl)
 export(make_domain_items_ls)
+export(make_fake_ts_data)
 export(make_folds_ls)
 export(make_item_wrst_wghts_ls_ls)
 export(make_knit_pars_ls)
@@ -97,6 +98,7 @@ export(plot_lnr_cmprsn)
 export(plot_lnr_cmprsn_sctr_plt)
 export(plot_obsd_predd_dnst)
 export(plot_obsd_predd_sctr)
+export(predict_aqol6d)
 export(predict_from_mdl_coefs)
 export(print_all_plts_for_mdl_set)
 export(print_table_xx)
@@ -121,6 +123,7 @@ export(validate_firstbounce_k6)
 export(validate_firstbounce_oasis)
 export(validate_firstbounce_phq9)
 export(validate_firstbounce_scared)
+export(write_all_alg_outps)
 export(write_box_cox_tfmn)
 export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
@@ -131,8 +134,10 @@ export(write_mdl_type_sngl_outps)
 export(write_predr_cmprsn_outps)
 export(write_results_to_csv)
 export(write_rndrd_rprt)
+export(write_shareable_mdls)
 export(write_sngl_predr_multi_mdls_outps)
 export(write_ts_mdls)
+export(write_ts_mdls_from_alg_outp)
 import(methods)
 importFrom(Boruta,Boruta)
 importFrom(Hmisc,label)
@@ -235,6 +240,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
+importFrom(purrr,map_lgl)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_dbl)
