--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ready4u
 Title: Map Measures Routinely Collected in Mental Health
     Services To Health Utility
-Version: 0.0.0.9062
+Version: 0.0.0.9064
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -44,8 +44,52 @@ RoxygenNote: 7.1.1
 Imports: 
     testthat,
     knitr,
-    lifecycle
+    lifecycle,
+    ggfortify,
+    knitrBootstrap,
+    ready4fun (>= 0.0.0.9254),
+    ready4use (>= 0.0.0.9091),
+    assertthat,
+    boot,
+    Boruta,
+    brms,
+    caret,
+    dplyr,
+    flextable,
+    ggalt,
+    ggplot2,
+    grDevices,
+    Hmisc,
+    hutils,
+    kableExtra,
+    magrittr,
+    MASS,
+    Matrix,
+    matrixcalc,
+    methods,
+    mice,
+    officer,
+    psych,
+    purrr,
+    randomForest,
+    rlang,
+    rmarkdown,
+    simstudy,
+    stats,
+    stringi,
+    stringr,
+    Surrogate,
+    synthpop,
+    tibble,
+    tidyr,
+    tidyselect,
+    utils,
+    viridis,
+    xtable
 VignetteBuilder: knitr
 RdMacros: lifecycle
 Depends: 
     R (>= 2.10)
+Remotes: 
+    ready4-dev/ready4fun,
+    ready4-dev/ready4use
