Removed aqol content

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,37 +29,9 @@ reference:
   - firstbounce_k6
 - title: "Functions"
 - contents:
-  - add_aqol6dU_to_aqol6d_items_tb
-  - add_dim_disv_to_aqol6d_items_tb
-  - add_dim_scores_to_aqol6d_items_tb
-  - add_itm_disv_to_aqol6d_itms_tb
-  - add_labels_to_aqol6d_tb
-  - add_uids_to_tbs_ls
-  - add_unwtd_dim_tots
-  - calculate_adult_aqol6dU
-  - calculate_aqol6d_dim_1_disv
-  - calculate_aqol6d_dim_2_disv
-  - calculate_aqol6d_dim_3_disv
-  - calculate_aqol6d_dim_4_disv
-  - calculate_aqol6d_dim_5_disv
-  - calculate_aqol6d_dim_6_disv
-  - extract_guide_box_lgd
-  - force_min_max_and_int_cnstrs
-  - force_vec_to_sum_to_int
-  - impute_adult_aqol6d_items_tb
-  - make_aqol6d_fns_ls
-  - make_aqol6d_items_tb
-  - make_correlated_data_tb
-  - make_corstars_tbl_xx
-  - make_dim_sclg_cons_dbl
-  - make_domain_items_ls
-  - make_item_wrst_wghts_ls_ls
-  - make_pdef_cor_mat_mat
-  - make_synth_series_tbs_ls
-  - make_vec_with_sum_of_int
-  - randomise_changes_in_fct_levs
-  - reorder_tbs_for_target_cors
-  - replace_with_missing_vals
-  - scramble_xx
-  - transform_raw_aqol_tb_to_aqol6d_tb
-  - write_results_to_csv
+  - add_utility_predn_to_ds
+  - make_fake_ts_data
+  - write_all_alg_outps
+  - write_rprt
+  - write_shareable_mdls
+  - write_ts_mdls_from_alg_outp
