--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(write_mdl_plts)
 export(write_mdl_type_covars_mdls)
 export(write_mdl_type_multi_outps)
 export(write_mdl_type_sngl_outps)
+export(write_new_outp_dir)
 export(write_predr_cmprsn_outps)
 export(write_rprt)
 export(write_shareable_mdls)
@@ -41,6 +42,7 @@ importFrom(brms,bayes_R2)
 importFrom(caret,MAE)
 importFrom(caret,R2)
 importFrom(caret,RMSE)
+importFrom(dataverse,get_dataset)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -69,6 +71,7 @@ importFrom(purrr,map2)
 importFrom(purrr,map2_dfr)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
+importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
@@ -89,6 +92,7 @@ importFrom(stats,setNames)
 importFrom(stats,sigma)
 importFrom(stats,simulate)
 importFrom(stringi,stri_locate_last_fixed)
+importFrom(stringr,str_locate)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
 importFrom(synthpop,syn)
