--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,28 @@ export(calculate_dep_var_tfmn)
 export(calculate_rmse)
 export(fit_clg_log_tfmn)
 export(fit_gsn_log_lnk)
+export(knit_mdl_rprt)
+export(make_brms_mdl_print_ls)
+export(make_brms_mdl_smry_tbl)
+export(make_corstars_tbl_xx)
 export(make_fake_ts_data)
+export(make_folds_ls)
+export(make_knit_pars_ls)
 export(make_mdl)
 export(make_mdl_nms_ls)
+export(make_mdl_smry_elmt_tbl)
 export(make_predn_ds_with_one_predr)
+export(make_predr_vals)
+export(make_predr_vars_nms_ls)
+export(make_prefd_mdls_vec)
 export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl)
 export(make_smry_of_ts_mdl)
 export(predict_utility)
+export(print_all_plts_for_mdl_set)
+export(print_table_xx)
+export(print_ts_mdl_plts)
 export(transform_data_tb_for_cmprsn)
 export(transform_dep_var_nm)
 export(transform_dep_var_nm_for_cll)
@@ -36,22 +49,27 @@ export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
 importFrom(Boruta,Boruta)
+importFrom(Hmisc,latexTranslate)
+importFrom(Hmisc,rcorr)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
 importFrom(caret,MAE)
 importFrom(caret,R2)
 importFrom(caret,RMSE)
+importFrom(caret,createFolds)
 importFrom(dataverse,get_dataset)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
@@ -59,22 +77,41 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise_all)
+importFrom(flextable,add_footer_lines)
+importFrom(flextable,autofit)
+importFrom(flextable,bold)
+importFrom(flextable,colformat_num)
+importFrom(flextable,flextable)
+importFrom(flextable,merge_h_range)
+importFrom(flextable,set_caption)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
+importFrom(kableExtra,footnote)
+importFrom(kableExtra,kable_paper)
+importFrom(kableExtra,kbl)
+importFrom(kableExtra,row_spec)
+importFrom(knitr,knit_child)
+importFrom(knitr,knit_expand)
 importFrom(magrittr,"%>%")
+importFrom(officer,run_autonum)
 importFrom(psych,describe)
 importFrom(psych,logit)
 importFrom(purrr,discard)
+importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_chr)
 importFrom(purrr,map2_dfr)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pmap)
 importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
+importFrom(purrr,walk)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4fun,get_from_lup_obj)
@@ -93,10 +130,14 @@ importFrom(stats,sigma)
 importFrom(stats,simulate)
 importFrom(stringi,stri_locate_last_fixed)
 importFrom(stringr,str_locate)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
 importFrom(synthpop,syn)
+importFrom(tibble,add_case)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(utils,capture.output)
 importFrom(utils,data)
+importFrom(xtable,xtable)
