added ns to get_dv nm fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ importFrom(purrr,walk)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4fun,get_from_lup_obj)
+importFrom(ready4use,get_fl_id_from_dv_ls)
 importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
