--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(make_predn_ds_with_one_predr)
 export(make_predr_vals)
 export(make_predr_vars_nms_ls)
 export(make_prefd_mdls_vec)
+export(make_rprt_type_ls)
 export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl)
@@ -42,6 +43,7 @@ export(write_mdl_type_multi_outps)
 export(write_mdl_type_sngl_outps)
 export(write_new_outp_dir)
 export(write_predr_cmprsn_outps)
+export(write_rndrd_rprt)
 export(write_rprt)
 export(write_shareable_mdls)
 export(write_sngl_predr_multi_mdls_outps)
@@ -120,6 +122,7 @@ importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(rmarkdown,render)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,as.formula)
@@ -130,6 +133,7 @@ importFrom(stats,setNames)
 importFrom(stats,sigma)
 importFrom(stats,simulate)
 importFrom(stringi,stri_locate_last_fixed)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
