--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl)
 export(make_smry_of_ts_mdl)
+export(make_unique_ls_elmt_idx_int)
 export(predict_utility)
 export(print_all_plts_for_mdl_set)
 export(print_table_xx)
@@ -76,9 +77,11 @@ importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise_all)
+importFrom(dplyr,ungroup)
 importFrom(flextable,add_footer_lines)
 importFrom(flextable,autofit)
 importFrom(flextable,bold)
@@ -101,6 +104,7 @@ importFrom(psych,logit)
 importFrom(purrr,discard)
 importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
+importFrom(purrr,flatten_int)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
