update for dependencies@

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
 importFrom(Boruta,Boruta)
+importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(assertthat,assert_that)
@@ -77,6 +78,7 @@ importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
@@ -95,6 +97,7 @@ importFrom(kableExtra,footnote)
 importFrom(kableExtra,kable_paper)
 importFrom(kableExtra,kbl)
 importFrom(kableExtra,row_spec)
+importFrom(kableExtra,scroll_box)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
 importFrom(magrittr,"%>%")
